# ad_arch_simulate

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.example.json  demo_console_output.py  docker-compose.yml  pyproject.toml  test_demo_endpoints.py
.kiro/specs/ad-system-architecture/: design.md  requirements.md  tasks.md
config/: logging.conf  monitoring.yml
docs/: api-documentation.md  deployment.md
migrations/: env.py
scripts/: init_database.py  production_deploy.py  run_tests.py  start_services.py  start_single_service.py
server/: __init__.py
server/ad-exchange/: __init__.py  main.py
server/ad-management/: __init__.py  main.py
server/dmp/: __init__.py  main.py
server/dsp/: __init__.py  main.py
server/ssp/: __init__.py  main.py
shared/: __init__.py  config.py  database.py  database_service.py  models.py  monitoring.py  repositories.py  utils.py
tests/: __init__.py  conftest.py  test_ad_exchange_service.py  test_ad_management_service.py  test_database_integration.py  test_dmp_service.py  test_dsp_service.py  test_rtb_demo_flow.py  test_service_communication.py  test_shared_models.py  test_shared_utils.py  test_ssp_service.py  test_system_integration.py
